Fix CLI project opening